--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,11 @@
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 
-# testing
-/coverage
-
-
-# production
+# secret files
 /app/DigiCertGlobalRootCA.crt.pem
 /app/client_secret.json
 
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
+#env file
 .env
 
 
